[gd_scene load_steps=4 format=2]

[ext_resource path="res://sonidos/Sonido Victoria.wav" type="AudioStream" id=1]
[ext_resource path="res://game/Game.gd" type="Script" id=2]
[ext_resource path="res://sonidos/Sonido Error.wav" type="AudioStream" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Tablero" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -488.0
margin_top = -104.0
margin_right = 488.0
margin_bottom = 282.0
grow_horizontal = 2
custom_constants/vseparation = 5
custom_constants/hseparation = 5
columns = 7

[node name="NuevoJuego" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -147.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = 86.0
text = "Nuevo Juego"

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -301.0
margin_top = 20.0
margin_right = 305.0
margin_bottom = 97.0
autowrap = true

[node name="Sonidos" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="win_fx" type="AudioStreamPlayer" parent="Sonidos"]
stream = ExtResource( 1 )
mix_target = 1

[node name="error_fx" type="AudioStreamPlayer" parent="Sonidos"]
stream = ExtResource( 3 )
volume_db = -8.667
mix_target = 1

[node name="Error_Label" type="Label" parent="."]
margin_left = 39.0
margin_top = 20.0
margin_right = 182.0
margin_bottom = 86.0
text = "Errores #/#"
align = 1

[node name="WinScreen" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0.14902 )

[node name="Label" type="Label" parent="WinScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
text = "Felicidades, has ganado!"
align = 1
valign = 1

[connection signal="button_down" from="NuevoJuego" to="." method="_on_NuevoJuego_button_down"]
[connection signal="finished" from="Sonidos/win_fx" to="." method="_on_win_fx_finished"]
